# ChangeLog for dev-ruby/default_value_for
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Feb 2014; Hans de Graaff <graaff@gentoo.org>
  -default_value_for-1.0.7.ebuild, -default_value_for-2.0.1.ebuild,
  -default_value_for-2.0.2.ebuild:
  Cleanup.

*default_value_for-2.0.3 (21 Jun 2013)

  21 Jun 2013; Hans de Graaff <graaff@gentoo.org>
  +default_value_for-2.0.3.ebuild:
  Version bump.

*default_value_for-2.0.2 (11 Apr 2013)

  11 Apr 2013; Hans de Graaff <graaff@gentoo.org>
  +default_value_for-2.0.2.ebuild:
  Version bump.

*default_value_for-2.0.1 (20 Jul 2012)

  20 Jul 2012; Hans de Graaff <graaff@gentoo.org>
  +default_value_for-2.0.1.ebuild:
  Version bump.

*default_value_for-1.0.7 (14 Feb 2012)

  14 Feb 2012; Hans de Graaff <graaff@gentoo.org>
  +default_value_for-1.0.7.ebuild, +metadata.xml:
  Initial import.
