@@ -1,1 +1,2 @@
 DIST default_value_for-2.0.3.gem 15360 SHA256 9217290832b543a9a84d9ce9c706ad73ab97445a3fd5b61090f23ce721f7dd98 SHA512 5b2398cfb0a8b9f35cbae12c3e53756b0aa147adfeeb25c117efbf39456b20aa952b0b5963bfa8428fdcc900f73d5a164244b5604273a283f6ca25330ba7ba46 WHIRLPOOL 18c685a674e4a0c78908cab28a7f1df2d06fdd9f53989cbbda733848782138cc376a4d0bb1836664251f351d3e9e5ee9b3b18740abc34c11950d571b2c7f0e7e
+DIST default_value_for-3.0.0.gem 16896 SHA256 1fbd89cb5e7dab1820f7da6bbf5972c36e41acaa25101f129a7adffe9b987021 SHA512 38a179e067e82ed86d4a6e52071fdb987783af05aad816810c5322ace23b8188055ecc96208f9cab9aa72ba5a3feea81e5024b909b345003ea972c79013ad7fb WHIRLPOOL 64f30566835d1b03ce4dd561b0047dd3c32bb8efeb7bbe7b76abe9d927cfa2ac98ad4c5675dcd3bf202672357e2581abcb32656712789bd9f03e3abf165523b4
