@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*default_value_for-3.0.0 (21 Feb 2014)
+
+  21 Feb 2014; Hans de Graaff <graaff@gentoo.org>
+  +default_value_for-3.0.0.ebuild:
+  Version bump.
+
   21 Feb 2014; Hans de Graaff <graaff@gentoo.org>
   -default_value_for-1.0.7.ebuild, -default_value_for-2.0.1.ebuild,
   -default_value_for-2.0.2.ebuild:
